--- a/pom.xml
+++ b/pom.xml
@@ -5,28 +5,27 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
     <dependencies>
- <dependency>
+<dependency>
     <groupId>javax.servlet</groupId>
-    <artifactId>servlet-api</artifactId>
-    <version>2.5</version>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.0.1</version>
     <scope>provided</scope>
 </dependency>
-   <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>jsp-api</artifactId>
-    <version>2.0</version>
-    <scope>provided</scope>
-</dependency>
+	<dependency>
+	    <groupId>jspapi</groupId>
+	    <artifactId>jsp-api</artifactId>
+	    <version>2.0</version>
+	</dependency>
     <dependency>
-        <groupId>jstl</groupId>
+        <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
         <version>1.2</version>
     </dependency>
     <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.11</version>
-    </dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.11</version>
+</dependency>
 </dependencies>  
   <build>
     <plugins>
